--- a/GameTrackr/App.config
+++ b/GameTrackr/App.config
@@ -8,14 +8,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
-    <userSettings>
-        <GameTrackr.Properties.Settings>
-            <setting name="psp" serializeAs="String">
-                <value>C:\Teste\psp</value>
-            </setting>
-            <setting name="gba" serializeAs="String">
-                <value>C:\Teste\gba</value>
-            </setting>
-        </GameTrackr.Properties.Settings>
-    </userSettings>
+    <appSettings>
+      <add key="psp" value="C:\Teste" />
+      <add key="gba" value="" />
+      <add key="psone" value="" />
+    </appSettings>
 </configuration>
