--- a/GameTrackr/Properties/Settings.settings
+++ b/GameTrackr/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="gba" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Teste\gba</Value>
     </Setting>
+    <Setting Name="psone" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
